[tool.poetry]
name = "apic"
version = "0.1.0"
description = ""
authors = ["Sohan Basak <ronnie.basak96@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.5.3"
streamlit = "^1.29.0"
fastapi = "^0.109.0"
uvicorn = "^0.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
